@@ -32,5 +32,5 @@ using System.Runtime.InteropServices;
 // You can specify all the values or you can default the Build and Revision Numbers 
 // by using the '*' as shown below:
 // [assembly: AssemblyVersion("1.0.*")]
-[assembly: AssemblyVersion("3.2014.02.02")]
-[assembly: AssemblyFileVersion("3.2014.02.02")]
+[assembly: AssemblyVersion("3.2014.02.04")]
+[assembly: AssemblyFileVersion("3.2014.02.04")]
